# art-interp

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
data/heatmaps/: index.json
scripts/: analyze_elo_correlations.py  analyze_mirror_self_features.py  analyze_sae_correlations.py  build_artwork_top_features.py  compare_prompts.py  compute_all_correlations.py  compute_correlations_fine_art.py  compute_monosemanticity.py  compute_spatial_correlations.py  elo_pairwise_comparison.py  extract_sae_features.py  extract_spatial_features.py  extract_spatial_features_layer11.py  generate_claude_opinions.py  generate_feature_heatmaps.py  generate_sample_heatmaps.py  import_feature_labels_to_db.py  label_features_gemini.py  label_spatial_features_gemini.py  load_rating_correlations_to_db.py  populate_database.py  rate_paintings_self_reflection.py  select_features_for_labeling.py  test_mirror_self_prompt.py  text2concept_probe.py  visualize_sae_results.py
server/: __init__.py  config.py  main.py
server/database/: __init__.py  connection.py  models.py  schema.sql
src/interpretability/: __init__.py
src/interpretability/analysis/: __init__.py  correlations.py  feature_selection.py  monosemanticity.py
src/interpretability/core/: __init__.py  configs.py  sae_extractor.py  types.py
src/interpretability/labeling/: __init__.py  gemini_labeler.py  prompts.py
src/interpretability/storage/: __init__.py  file_store.py  protocols.py  sample_provider.py
tests/: __init__.py  conftest.py  test_sample_provider.py  test_types.py
web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css
web/src/components/: FeatureBrowser.tsx  FeatureBrowserControls.tsx  FeatureCard.tsx  FeatureDetailModal.tsx  FeatureGallery.tsx  GalleryControls.tsx  LandingPage.tsx  MethodsPage.tsx  PaintingGallery.tsx  PaintingViewer.tsx
